--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .wrap{
   display: block;
-  width: 500px;
+  width: 600px;
   margin: 0 auto;
   font-family: 'Public Sans', sans-serif;
 
@@ -35,16 +35,145 @@ input{
 .input button {
   font-family: 'Public Sans', sans-serif;
   float:right;
-  border:none;
+  background-color: #FAFAFA;
+  border-radius: 2px;
   font-size: 1.2em;
   margin: auto;
   display: inline-block;
   cursor: pointer;
   position: absolute;
-  top: 28%;
+  top: 25%;
   margin-left: 15px;
+  color: #5A5959;
 }
 
 .todo{
   margin-top: 30px;
+}
+
+#list1 {
+  list-style: none;
+  font-size: 1.5em;
+  line-height: 1.5em;
+  padding-left: 0px;
+}
+
+.item{
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  align-items: center;
+}
+
+.extract{
+  border:none;
+  width:80%;
+
+}
+
+.edit{
+  position: absolute;
+  right:50px;
+  margin-right: 10px;
+  height: 25px;
+  width: 40px;
+  font-size:0.6em;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border:none;
+}
+
+.delete{
+  position: absolute;
+  right:0px;
+  height: 25px;
+  font-size:0.6em;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border:none;
+  margin-right: 12px;
+}
+/* input[type='checkbox']{
+    background-color: #fff;
+    border: 1px solid #black;
+    border-radius: 50%;
+    cursor: pointer;
+    height: 28px;
+    width: 28px;
+    opacity:0;
+} */
+
+/* * Customize the label (the container) */
+.container {
+  display: inline-block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: -5px;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  background-color: #eee;
+  margin-right: 20px;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+  left: 6px;
+  top: 3px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
